# ci-juce-test

./: .gitignore  CMakeLists.txt  secrets.json
.github/workflows/: artifacts.yml  cmake.yml  installers.yml  mac-workflow.yml  mac_matrix.json  main-workflow.yml  matrix_includes.json  matrix_prep.yml  projucer.yml  test.yml  variables.yml  win-workflow.yml  win_matrix.json
SDK/AAX_Tools_DSH_x93_WIN/: DigiShell_AAXTools_ReadMe.txt  DigiShell_AAXValidator_ReadMe.txt
SDK/AAX_Tools_DSH_x93_WIN/AAXValidatorResources/: Main.valconfig
SDK/AAX_Tools_DSH_x93_WIN/AAXValidatorResources/Tools/: AAXH_Describe_Validation.valconfig  AAXH_ParameterTraversal.valconfig  DSH_AAXH_Data_Model.valconfig  DSH_AAXH_HostContextSupport.valconfig  DSH_AAXH_Load_Unload.valconfig  DSH_AAXH_Load_Unload_CPP.valconfig  DSH_AAXH_Plugin_Information.valconfig  DSH_AAXH_S6Feature_CPP.valconfig  DSH_Comprehensive_CycleCounts.valconfig
SDK/AAX_Tools_DSH_x93_WIN/AAXValidatorResources/Tools/DTT/: run_test.bat
SDK/AAX_Tools_DSH_x93_WIN/AAXValidatorResources/Tools/DTT/sources/: DishTestTool.rb
SDK/AAX_Tools_DSH_x93_WIN/AAXValidatorResources/Tools/dishes/: DAE.dish  aaxh.dish
SDK/AAX_Tools_DSH_x93_WIN/DTT/sources/: ReadMe.txt
SDK/AAX_Tools_DSH_x93_WIN/DTT/sources/classes/: AAXHDishUtils.rb  KernelAdditions.rb  Logger.rb  PTPrefWrangler.rb  PipeConnection.rb  ProtoBuffConnection.rb  Results.rb  RuntimeInfo.rb  SysInfo.rb  Target.rb  TestInfo.rb  TimeInfo.rb
SDK/AAX_Tools_DSH_x93_WIN/DTT/sources/scripts/: DSH_SigCancellation.rb  DSH_TI_CycleCounts.rb  ValidatorRunAllTests.rb
SDK/AAX_Tools_DSH_x93_WIN/dishes/: aaxval.dish
SDK/DigiShell/: DigiShell_AAXTools_ReadMe.txt  DigiShell_AAXValidator_ReadMe.txt
SDK/DigiShell/CommandLineTools/: commands.sh  dsh.digitrace  dsh.history
SDK/DigiShell/CommandLineTools/Dishes/DAE.dish/Contents/: PkgInfo
SDK/DigiShell/CommandLineTools/Dishes/aaxval.dish/Contents/: Info.plist
SDK/DigiShell/CommandLineTools/Logs/: dsh_2023_01_11_21_38_10.txt  dsh_2023_01_11_21_39_11.txt  dsh_2023_01_11_21_39_40.txt  dsh_2023_01_11_21_40_10.txt  dsh_2023_01_11_21_41_11.txt  dsh_2023_01_11_21_41_55.txt  dsh_2023_01_11_21_42_47.txt  dsh_2023_01_11_21_43_40.txt  dsh_2023_01_11_21_44_31.txt  dsh_2023_01_11_21_45_59.txt  dsh_2023_01_11_22_22_36.txt  dsh_2023_01_11_22_24_46.txt  dsh_2023_01_11_22_27_21.txt  dsh_2023_01_17_02_39_57.txt  dsh_2023_01_17_02_41_04.txt  dsh_2023_01_17_02_41_36.txt  dsh_2023_01_17_02_45_34.txt  dsh_2023_01_17_02_45_47.txt  dsh_2023_01_17_02_46_27.txt  dsh_2023_01_17_02_46_47.txt  dsh_2023_01_17_02_48_32.txt  dsh_2023_01_17_02_49_15.txt  dsh_2023_01_17_02_49_37.txt  dsh_2023_01_17_02_50_18.txt  dsh_2023_01_17_02_51_27.txt  dsh_2023_01_17_02_51_30.txt  dsh_2023_01_17_02_51_45.txt  dsh_2023_01_17_02_52_12.txt  dsh_2023_01_17_02_53_24.txt  dsh_2023_01_17_02_54_20.txt  dsh_2023_01_17_02_56_31.txt
SDK/DigiShell/DTT/: run_test.command
SDK/DigiShell/DTT/sources/: ReadMe.txt
SDK/DigiShell/DTT/sources/classes/: AVDECC.rb  AppCmd.rb  ArgType.rb  AsciiCharts.rb  DTTError.rb  DTTUtils.rb  LogManager.rb  PTPrefWrangler.rb  PipeConnection.rb  RemoteDSH.rb  RunSuite.rb  Script.rb  StressTest.rb  SysInfo.rb  Volume.rb  ZetaDish.rb
SDK/DigiShell/DTT/sources/scripts/: DSH_SigCancellation.rb  DSH_TI_CycleCounts.rb  ValidatorRunAllTests.rb
SDK/DigiShell/DTT/sources/suites/: demogain_example.gss
SDK/DigiShell/Frameworks/: libicui18n.62.1.dylib  libicuuc.62.1.dylib  taglib.dylib
SDK/DigiShell/Frameworks/AAE.framework/: AAE
SDK/DigiShell/Frameworks/AAXHostShell.framework/Versions/A/: AAXHostShell
SDK/DigiShell/Frameworks/AAXValidator.framework/: AAXValidator
SDK/DigiShell/Frameworks/AAXValidatorResources/Config/: aaxval.info.support.audiosuite.valconfig  aaxval.info.support.general.valconfig  aaxval.info.support.s6_feature.valconfig  aaxval.test.automation_parameter.valconfig  aaxval.test.cycle_counts.valconfig  aaxval.test.data_model.valconfig  aaxval.test.describe_validation.valconfig  aaxval.test.load_unload.valconfig  aaxval.test.page_table.load.valconfig  aaxval.test.parameter.valconfig  aaxval.test.parameter_traversal.valconfig
SDK/DigiShell/Frameworks/AAXValidatorResources/NonPublic/: aaxval.info.satin.valconfig  aaxval.info.support.host_context.valconfig  aaxval.test.load_unload.script.valconfig
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/ClipFX.framework/: ClipFX
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/CommandLineTools/: dsh  dsh.digitrace
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/DHS.framework/: DHS
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/DSK.framework/: DSK
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/DTT/: run_irb.command
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/DUI.framework/: DUI
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/Digitrace.framework/: Digitrace
SDK/DigiShell/Frameworks/AAXValidatorResources/Tools/DynamicXPC.framework/: DynamicXPC
SDK/DigiShell/Frameworks/AFnd.framework/: AFnd
SDK/DigiShell/Frameworks/CDS.framework/: CDS
SDK/DigiShell/Frameworks/DSH_DishUtils.framework/: DSH_DishUtils
SDK/DigiShell/Frameworks/DigiDal.kext/Contents/: Info.plist
SDK/DigiShell/Frameworks/MFnd.framework/: MFnd
SDK/DigiShell/Frameworks/SatelliteLink.framework/: SatelliteLink
SDK/DigiShell/Frameworks/TCPE.framework/: TCPE
SDK/aax-sdk-2-4-0/Interfaces/: AAX_Version.h
SDK/aax-sdk-2-4-0/Libs/AAXLibrary/MacBuild/: AAXLibrary_common.xcconfig
Source/: PluginEditor.cpp  PluginProcessor.h
Source/Helpers/: Parameters.h  Sizes.h
With Projucer/: CI_Test.jucer
With Projucer/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installers/mac/: ci-cmake-juce.pkgproj
installers/mac/Documentation/: Intro.txt  License.txt  ReadMe.txt
installers/win/: ci-cmake-juce.iss
plugins/ci-cmake-juce.vst/Contents/: Info.plist
plugins/mac/ci-cmake-juce.aaxplugin/Contents/: Info.plist
plugins/mac/ci-cmake-juce.component/Contents/: Info.plist
scripts/: sign_mac.sh  uploadInstallers.py  validate.sh  validate_aax.sh  validate_std.sh
(+1185 files in other folders)
